# openarm_mimic

./: CMakeLists.txt  README.md  package.xml  setup.py
include/openarm_mimic/: robot_kdl.hpp
launch/: mimic.launch.py  mimic_board.launch.py  mimic_laptop.launch.py
msg/: MimicFrame.msg
openarm_mimic/: __init__.py  mimic_camera_controller.py  mimic_command_publisher.py  mimic_coordinate_mapping.py  mimic_motion_capture.py  mimic_viewer.py  mimic_vision.py
src/: mimic_control.cpp  robot_kdl.cpp
